@@ -83,11 +83,6 @@ public class IndexEntryResourceTypesTest
         verifyCanHashAllTypes( ResourceTypes::indexEntryResourceId_4_x );
     }
 
-    private interface IndexEntryHasher
-    {
-        long hash( long labelId, ExactPredicate[] predicates );
-    }
-
     @SuppressWarnings( {"UnnecessaryBoxing", "BooleanConstructorCall"} )
     private void verifyCanHashAllTypes( IndexEntryHasher hasher )
     {
@@ -101,7 +96,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true, false} ) ) );
-        hasher.hash( 42, array( exact( 1, new Boolean( true ) ) ) );
+        hasher.hash( 42, array( exact( 1, Boolean.valueOf(true) ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true, false} ) ) );
@@ -125,7 +120,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new char[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a', 'b'} ) ) );
-        hasher.hash( 42, array( exact( 1, new Character( 'a' ) ) ) );
+        hasher.hash( 42, array( exact( 1, Character.valueOf('a') ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a', 'b'} ) ) );
@@ -133,7 +128,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Float( (float) 1 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Float.valueOf((float) 1) ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f, 2.0f} ) ) );
@@ -157,7 +152,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Double( 1.0 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Double.valueOf(1.0) ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0, 2.0} ) ) );
@@ -172,7 +167,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new boolean[]{} ), exact( ~1, new boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true} ), exact( ~1, new boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true, false} ), exact( ~1, new boolean[]{true, false} ) ) );
-        hasher.hash( 42, array( exact( 1, new Boolean( true ) ), exact( ~1, new Boolean( true ) ) ) );
+        hasher.hash( 42, array( exact( 1, Boolean.valueOf(true) ), exact( ~1, Boolean.valueOf(true) ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{} ), exact( ~1, new Boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true} ), exact( ~1, new Boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true, false} ), exact( ~1, new Boolean[]{true, false} ) ) );
@@ -196,7 +191,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new char[]{} ), exact( ~1, new char[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a'} ), exact( ~1, new char[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a', 'b'} ), exact( ~1, new char[]{'a', 'b'} ) ) );
-        hasher.hash( 42, array( exact( 1, new Character( 'a' ) ), exact( ~1, new Character( 'a' ) ) ) );
+        hasher.hash( 42, array( exact( 1, Character.valueOf('a') ), exact( ~1, Character.valueOf('a') ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{} ), exact( ~1, new Character[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a'} ), exact( ~1, new Character[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a', 'b'} ), exact( ~1, new Character[]{'a', 'b'} ) ) );
@@ -204,7 +199,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new float[]{} ), exact( ~1, new float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1} ), exact( ~1, new float[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1, 2} ), exact( ~1, new float[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Float( (float) 1 ) ), exact( ~1, new Float( (float) 1 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Float.valueOf((float) 1) ), exact( ~1, Float.valueOf((float) 1) ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{} ), exact( ~1, new Float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f} ), exact( ~1, new Float[]{1.0f} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f, 2.0f} ), exact( ~1, new Float[]{1.0f, 2.0f} ) ) );
@@ -228,9 +223,14 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new double[]{} ), exact( ~1, new double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1} ), exact( ~1, new double[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1, 2} ), exact( ~1, new double[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Double( 1.0 ) ), exact( ~1, new Double( 1.0 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Double.valueOf(1.0) ), exact( ~1, Double.valueOf(1.0) ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{} ), exact( ~1, new Double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0} ), exact( ~1, new Double[]{1.0} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0, 2.0} ), exact( ~1, new Double[]{1.0, 2.0} ) ) );
+    }
+
+	private interface IndexEntryHasher
+    {
+        long hash( long labelId, ExactPredicate[] predicates );
     }
 }
